* The csv output of 'harpdump --dataset' can now be used as content of a .pth
  file. This improves the performance of harpcollocate/harpmerge/etc. as they
  no longer need to open and extract metadata from files themselves anymore.

* Added derivation to retrieve angstrom exponent from aerosol optical depth.

* Added derivation to retrieve tropospheric/stratospheric column avk from
  total column avk and tropopause altitude.

* Added format and history fields to harp_product_metadata.

* harp_dataset_add_product() now ignores files/directories starting with '.'.

* Updates to product ingestions:
  - S5P L2 CLOUD: added cloud_type and cloud_top_temperature

1.11 2020-05-19
~~~~~~~~~~~~~~~

* Added derivations to retrieve column number density from column vmr.

* Fixed issue in bin_spatial() where the weightfactor could be too high when
  oversampling the input data. Grid cells that intersected with the data
  polygon could end up with a weightfactor >1.0 (but <2.0).

* Fixed issue where molar mass was incorrectly provided for the species with
  the shortest matching name. e.g. the molar mass of CO was returned for CO2
  and of NO for NO2. This impacts vmr <-> mmr conversions for BrO2, COF2, COS,
  CO2, C2H2O2, H2O2, NOCl, NO2, N2O, N2O5, and all isotopologues (e.g. H2O_161).

* Removed irrelevant harp_str64() and harp_str64u() functions (HARP does not
  support 64bit integers).

* Fixed issue where molar mass linked to variables with a 'surface',
  'tropospheric', or 'stratospheric' prefix returned 0.

* Fixed error/crash in deriving dry air column vmr from dry air column mmr.

* Updates to product ingestions:
  - GOME-2 L2: added support for SO2 columns at all plume heights
  - OMI L2 CLDO2/CLDRR: added validity variable

1.10 2020-03-31
~~~~~~~~~~~~~~~

* Added support for -ar/--reduce-operations parameter in harpmerge and
  for reduce_operations parameter in harp.import_product() Python function.
