@@ -219,6 +219,8 @@
 </li>
       <li><a href="python.html#harp.import_product">harp.import_product() (built-in function)</a>
 </li>
+      <li><a href="python.html#harp.import_product_metadata">harp.import_product_metadata() (built-in function)</a>
+</li>
       <li><a href="python.html#harp.NoDataError">harp.NoDataError</a>
 </li>
       <li><a href="python.html#harp.Product">harp.Product (built-in class)</a>
@@ -413,10 +415,10 @@
 </li>
       <li><a href="libharp_geometry.html#_CPPv330harp_geometry_has_area_overlapiPdPdiPdPdPiPd">harp_geometry_has_area_overlap (C++ function)</a>
 </li>
-      <li><a href="libharp_geometry.html#_CPPv331harp_geometry_has_point_in_areaddiPdPdPi">harp_geometry_has_point_in_area (C++ function)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="libharp_geometry.html#_CPPv331harp_geometry_has_point_in_areaddiPdPdPi">harp_geometry_has_point_in_area (C++ function)</a>
+</li>
       <li><a href="libharp_general.html#_CPPv323harp_get_data_type_name14harp_data_type">harp_get_data_type_name (C++ function)</a>
 </li>
       <li><a href="libharp_general.html#_CPPv328harp_get_fill_value_for_type14harp_data_type">harp_get_fill_value_for_type (C++ function)</a>
