@@ -675,6 +675,44 @@ a file pattern or a list of filenames/patterns.</li>
 </dd></dl>
 
 <dl class="function">
+<dt id="harp.import_product_metadata">
+<code class="descclassname">harp.</code><code class="descname">import_product_metadata</code><span class="sig-paren">(</span><em>filename</em>, <em>options=&quot;&quot;</em><span class="sig-paren">)</span></dt>
+<dd><p>Import specific metadata from a single file.</p>
+<dl class="docutils">
+<dt>This will try to extract the following information from a file.</dt>
+<dd><ul class="first last simple">
+<li>datetime_start</li>
+<li>datetime_stop</li>
+<li>dimension lengths for time, latitude, longitude, vertical, and spectral</li>
+<li>source_product</li>
+</ul>
+</dd>
+</dl>
+<p>If the file is not stored using the HARP format then it will try to import
+the metadata using one of the available ingestion modules.</p>
+<table class="docutils field-list" frame="void" rules="none">
+<col class="field-name" />
+<col class="field-body" />
+<tbody valign="top">
+<tr class="field-odd field"><th class="field-name">Parameters:</th><td class="field-body"><ul class="first simple">
+<li><strong>filename</strong> (<em>str</em>) – Filename of the product from which to extract the metadata</li>
+<li><strong>options</strong> (<em>str</em>) – Ingestion module specific options; should be specified as
+a semi-colon separated string of key=value pairs; only
+used if a file is not in HARP format.</li>
+</ul>
+</td>
+</tr>
+<tr class="field-even field"><th class="field-name">Returns:</th><td class="field-body"><p class="first">Imported metadata.</p>
+</td>
+</tr>
+<tr class="field-odd field"><th class="field-name">Return type:</th><td class="field-body"><p class="first last">collections.OrderedDict</p>
+</td>
+</tr>
+</tbody>
+</table>
+</dd></dl>
+
+<dl class="function">
 <dt id="harp.export_product">
 <code class="descclassname">harp.</code><code class="descname">export_product</code><span class="sig-paren">(</span><em>product</em>, <em>filename</em>, <em>file_format=&quot;netcdf&quot;</em>, <em>operations=&quot;&quot;</em>, <em>hdf5_compression=0</em><span class="sig-paren">)</span></dt>
 <dd><p>Export a HARP compliant product.</p>
